--- a/jam_and_job_search/src/Components/ArtistCards/ArtistCards.css
+++ b/jam_and_job_search/src/Components/ArtistCards/ArtistCards.css
@@ -2,6 +2,10 @@
     max-width: 20rem;
 }
 
+h1 {
+    color: inherit;
+}
+
 .cards-center {
     align-items: flex-end;
     padding: 15px;
