--- a/jam_and_job_search/src/Components/BandsInTown/BandsInTown.css
+++ b/jam_and_job_search/src/Components/BandsInTown/BandsInTown.css
@@ -2,6 +2,10 @@ table {
     align-content: flex-start;
 }
 
+.table-light {
+    color: #003844;
+}
+
 .spotify {
     color: #00ce6b;
 }
