--- a/jam_and_job_search/src/Components/Jumbo/Jumbo.css
+++ b/jam_and_job_search/src/Components/Jumbo/Jumbo.css
@@ -4,7 +4,7 @@
     background-attachment: fixed;
     background-size: cover;
     color:white;
-    padding-bottom: 275px;
+    padding-bottom: 350px;
     font-family: 'Lato', sans-serif !important;
 }
 
